tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_trait_returns_private_struct/execute__tests__noirc_frontend_tests_visibility_errors_if_pub_trait_returns_private_struct_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type `Bar` is more private than item `foo`
  ┌─ src/main.nr:6:16
  │
6 │             fn foo() -> Bar;
  │                ---
  │

Aborting due to 1 previous error
