tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_trait_returns_private_struct/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Bar` is more private than item `foo`
  ┌─ src/main.nr:6:16
  │
6 │             fn foo() -> Bar;
  │                ---
  │

Aborting due to 1 previous error
